--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,6 +4,7 @@ phases:
   install:
     commands:
       - "python -m platform"
+      - "echo 'hello, olive'"
   # pre_build:
   # build:
   # post_build:
